# projecttype

./: .env.example  .gitignore  AGENT_WORKPLAN.md  CLAUDE.md  DIAGNOSTICO_Y_PLAN_SOTA_2026-07.md  ECOSISTEMA.md  README.md  VISION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/golden/: golden_tipo_proyecto.jsonl  golden_tipo_proyecto.yaml  umbrales.yaml
data/prompts/: few_shot_examples.yaml  few_shot_mined.yaml  l3.yaml  reglas_discriminantes.yaml
data/taxonomy/: colisiones_keyword.csv  composites_index.csv  taxonomia_tipos_proyecto.csv  taxonomia_tipos_proyecto.json  taxonomia_tipos_proyecto.yaml
docs/: estructura_proyecto.md  revision_proyecto_legacy_id_tipo_pry.md
docs/eval/: README.md  auditoria_l3pure13_2026-07-10.md  baseline_pt17.json  confusion_1.0.0-fixture.csv  confusion_1.0.0-fixture_pairs.csv  confusion_2.0.0-expost.csv  confusion_2.0.0-expost_pairs.csv  confusion_2.1.0-expost-holdout_dev.csv  confusion_2.1.0-expost-holdout_dev_l3pure100.csv  confusion_2.1.0-expost-holdout_dev_l3pure100_pairs.csv  confusion_2.1.0-expost-holdout_dev_pairs.csv  confusion_2.1.0-expost-holdout_expost.csv  confusion_2.1.0-expost-holdout_expost_pairs.csv  confusion_2.1.0-expost-holdout_holdout.csv  confusion_2.1.0-expost-holdout_holdout_pairs.csv  eval_20260702T162526_mock-llm.json  eval_20260702T162549_mock-llm.json  eval_20260702T162620_mock-llm.json  eval_20260702T163808_mock-llm.json  eval_20260702T232535_mock-llm.json  eval_20260702T232556_mock-llm.json  eval_20260702T232732_mock-llm.json  eval_20260704T180859_mock-llm.json  (+40 more)
scripts/: analyze_l2_sector.py  build_few_shot_examples.py  build_revision_manual.py  calibrate_l2.py  classify_cascade.py  classify_l1.py  convert_expost_to_golden.py  convert_submuestra_to_golden.py  enrich_taxonomy_legacy.py  enrich_to_store.py  eval_golden.py  export_composites.py  export_l3_prompts.py  l3_status.py
src/projecttype/: cli.py  (+29 more)
tests/: test_api_hitl.py  test_classifier_l1.py  test_classifier_l2.py  test_classifier_l3.py  test_composite.py  test_convert_expost.py  test_embeddings.py  test_eval_golden.py  test_evaluation.py  test_few_shot_mining.py  test_from_selection.py  test_golden_split.py  test_incremental.py  test_inference_metadata.py  test_l3_cache.py  test_l3_vertex_cache.py  test_llm_provider.py  test_only_classified.py  test_pipeline_cascade_l3_resilience.py  test_prompt_context.py  test_sni_commons_client.py  test_store_gate.py  test_store_input.py  test_store_publish.py  test_verify_llm.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+45 files in other folders)
