[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proyecttype"
version = "0.1.0"
description = "Clasificador en cascada (L1 keywords -> L2 embeddings -> L3 LLM) de tipo de proyecto BIP/SNI."
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "polars>=1.0.0",
    "pyyaml>=6.0",
    "xlsxwriter>=3.2.0",
    "fastexcel>=0.7.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/proyecttype"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
