[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projecttype"
version = "0.2.0"
description = "Clasificador en cascada (L1 keywords -> L2 embeddings -> L3 LLM) de tipo de proyecto BIP/SNI."
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "sni-commons[store]",
    "google-genai>=1.0.0",
    "typer>=0.12",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",  # puente Arrow: DuckDB lee el DataFrame polars al publicar al store (PT-5)
    "pyyaml>=6.0",
    "xlsxwriter>=3.2.0",
    "fastexcel>=0.7.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

# sni-commons se consume por path mientras no haya índice privado (ADR-1/Fase 5).
[tool.uv.sources]
sni-commons = { path = "../sni-commons", editable = true }

[project.scripts]
projecttype = "projecttype.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/projecttype"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042 (str+Enum → StrEnum): cambiaría str()/format de los miembros. Criterio ecosistema.
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
